--- a/src/components/product.css
+++ b/src/components/product.css
@@ -5,12 +5,26 @@
     background-color: white;
     margin-right: 10px;
     width: 280px;
-    height: 320px;
+    height: 390px;
     display: inline-block;
+    padding: 10px;
+    vertical-align: top;
 
 }
 
 .product h4{
-    color: red;
+    color: limegreen;
     text-align: center;
+    
+}
+
+.product img{
+    width: 260px;
+    
+}
+
+.product .controls{
+    display: flex;
+    justify-content: space-around;
+    
 }
