--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,21 +1,44 @@
 .navbar-menu{
     padding: 5px;
     display: flex;
-    justify-content: space-around;
     height: 60px;
     align-items: center;
-    background-color: rgb(57, 242, 11);
+    background-color: #165b74;
+    color: white;
 }
 
-a{
-    text-transform: uppercase;
-    font-size: 18px;
-    color: navy;
+.navbar-menu a{
+    font-size: 16px;
+    color: #dadada;
     letter-spacing: 1px;
     font-weight: bolder;
     text-decoration: none;
+    margin-right: 20px;
 }
 
-a:hover{
-    color: red;
+.navbar-menu a:hover{
+    color: white;
+    text-decoration: underline;
+    text-transform: uppercase;
+}
+
+.navbar-menu .title{
+    font-weight: bold;
+    margin-left: 20px;
+    margin-right: 10px;
+    font-size: 20px;
+	animation: neon 1s ease infinite;
+    
+    
+}
+@keyframes neon {
+    0%,
+    100% {
+        text-shadow: 0 0 10px #00a2ff, 0 0 20px #00a2ff, 0 0 20px #00a2ff, 0 0 20px #00a2ff, 0 0 2px #33ccff, 2px 2px 2px #1a3d66;
+        color: #cceeff;
+    }
+    50% {
+        text-shadow: 0 0 2px #003366, 0 0 5px #003366, 0 0 5px #003366, 0 0 5px #003366, 0 0 2px #0066cc, 4px 4px 2px #002244;
+        color: #99d6ff;
+    }
 }
