--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,7 +1,8 @@
 .navbar-menu{
-    padding: 5px;
+    padding: 10px;
     display: flex;
     height: 60px;
+    justify-content: space-between;
     align-items: center;
     background-color: #165b74;
     color: white;
@@ -26,11 +27,11 @@
     font-weight: bold;
     margin-left: 20px;
     margin-right: 10px;
-    font-size: 20px;
+    font-size: 40px;
 	animation: neon 1s ease infinite;
-    
-    
+
 }
+
 @keyframes neon {
     0%,
     100% {
