--- a/src/components/product.css
+++ b/src/components/product.css
@@ -13,7 +13,7 @@
 }
 
 .product h4{
-    color: limegreen;
+    color: rgb(19, 95, 235);
     text-align: center;
     
 }
@@ -26,5 +26,7 @@
 .product .controls{
     display: flex;
     justify-content: space-around;
+    margin-top: 10px;
     
 }
+
