--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -2,7 +2,6 @@
     padding: 10px;
     display: flex;
     height: 60px;
-    justify-content: space-between;
     align-items: center;
     background-color: #165b74;
     color: white;
@@ -15,6 +14,10 @@
     font-weight: bolder;
     text-decoration: none;
     margin-right: 20px;
+}
+
+.navbar-menu .end{
+    margin-left: auto;
 }
 
 .navbar-menu a:hover{
