--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -31,21 +31,12 @@
     margin-left: 20px;
     margin-right: 10px;
     font-size: 40px;
-	animation: neon 1s ease infinite;
+    font-family: cursive;
+	
 
 }
 
-@keyframes neon {
-    0%,
-    100% {
-        text-shadow: 0 0 10px #00a2ff, 0 0 20px #00a2ff, 0 0 20px #00a2ff, 0 0 20px #00a2ff, 0 0 2px #33ccff, 2px 2px 2px #1a3d66;
-        color: #cceeff;
-    }
-    50% {
-        text-shadow: 0 0 2px #003366, 0 0 5px #003366, 0 0 5px #003366, 0 0 5px #003366, 0 0 2px #0066cc, 4px 4px 2px #002244;
-        color: #99d6ff;
-    }
-}
+
 
 .navbar-menu .user-info{
     border: 2px solid green;
