--- a/src/pages/admin.css
+++ b/src/pages/admin.css
@@ -40,3 +40,8 @@
     margin-top: 12px;
     text-align: center;
 }
+.admin h1{
+    font-family: cursive;
+    font-weight: 800;
+    font-size: 72px;
+}
