--- a/src/pages/catalog.css
+++ b/src/pages/catalog.css
@@ -8,4 +8,22 @@
 
 .catalog h1{
     padding: 12px;
+    font-family: cursive;
+    color: #165b74;
+    font-weight: 800;
+    font-size: 72px;
+    animation: neon 1s ease infinite;
 }
+@keyframes neon {
+    0%,
+    100% {
+        text-shadow: 0 0 10px #00a2ff, 0 0 20px #00a2ff, 0 0 20px #00a2ff, 0 0 20px #00a2ff, 0 0 2px #33ccff, 2px 2px 2px #1a3d66;
+        color: #cceeff;
+    }
+    50% {
+        text-shadow: 0 0 2px #003366, 0 0 5px #003366, 0 0 5px #003366, 0 0 5px #003366, 0 0 2px #0066cc, 4px 4px 2px #002244;
+        color: #99d6ff;
+    }
+}
+
+
