--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -24,6 +24,18 @@
     font-size: 90px;
     font-family: cursive;
     color: white;
+    animation: neon 1s ease infinite;
+}
+@keyframes neon {
+    0%,
+    100% {
+        text-shadow: 0 0 10px #00a2ff, 0 0 20px #00a2ff, 0 0 20px #00a2ff, 0 0 20px #00a2ff, 0 0 2px #33ccff, 2px 2px 2px #1a3d66;
+        color: #cceeff;
+    }
+    50% {
+        text-shadow: 0 0 2px #003366, 0 0 5px #003366, 0 0 5px #003366, 0 0 5px #003366, 0 0 2px #0066cc, 4px 4px 2px #002244;
+        color: #99d6ff;
+    }
 }
 
 .home .info h6{
@@ -42,3 +54,4 @@
     right: 17%;
     width: 200px;
 }
+
