--- a/src/pages/cart.css
+++ b/src/pages/cart.css
@@ -6,3 +6,46 @@
     color: darkcyan;
     text-align: center;
 }
+
+.cart .parent{
+    display: flex;
+    flex-direction: row;
+    padding-top: 20px;
+
+}
+
+.cart .prods{
+    flex: 3;
+}
+
+.cart .side-menu{
+    flex: 1;
+}
+
+.cart .prod-in-cart{
+    display: flex;
+    align-items: center;
+    border: 1px solid green;
+    background-color: white;
+    margin-bottom: 12px;
+}
+
+.cart .prod-in-cart img{
+    height: 80px;
+}
+
+.cart .prod-in-cart h5{
+    flex: 3;
+}
+
+.cart .prod-in-cart label{
+    flex: 1;
+}
+
+.cart .side-menu {
+    padding-top: 20px;
+}
+
+.cart .side-menu button{
+    margin-top: 40px;
+}
